--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!--Hero Section-->
         <div class="hero">
 
-            <h1>Hello There</h1>
+            <h1>Hello</h1>
 
             <p>My name is Claire, welcome to my website.</p>
 
