--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js" data-auto-a11y="true"></script>
     <script defer src="https://friconix.com/cdn/friconix.js"> </script> 
     <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
+     <script defer src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     
 
     <script defer src="main.js"></script>
