--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">CV Maker</h2>
                     <p>A CV maker made using React. </p>
-                    <a href="https://github.com/macaroonforu" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
-                    <a href="https://github.com/macaroonforu" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a href="https://github.com/macaroonforu/CV-Maker" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a href="https://cv-application2.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
                 </div>
                 <div class="project-image-content">
                     <img class="project-image" src="./projects/CV.png">
