--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:bi">
+    <link rel="icon" href="C.ico" />
 
     <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js" data-auto-a11y="true"></script>
     <script defer src="https://friconix.com/cdn/friconix.js"> </script> 
