--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <p>A CV maker made using React. Users can add personal information, an objective, and have the option to 
                         create, update, and delete educations/experiences.</p>
                     <a href="https://github.com/macaroonforu/CV-Maker" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
-                    <a href="https://cv-application2.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a href="https://cv-maker-fm8l.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
                     <p><span class="iconify" data-icon="devicon:react" data-inline="false"></span>        React</p>
                 </div>
                 <div class="project-image-content">
