--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <p><span class="iconify" data-icon="devicon:react" data-inline="false"></span>        React</p>
                 </div>
                 <div class="project-image-content">
-                    <img class="project-image" src="./projects/CV.png">
+                    <img class="project-image" src="./projects/CV.PNG">
                 </div>
             </div>
             <div class="individual-project-container">
