added crud project

--- a/index.html
+++ b/index.html
@@ -140,29 +140,28 @@
     <section id="projects">
         <h1 class="section-title">Projects</h1>
         <div class="projectdiv">
-            <!--
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">CRUD Application</h2>
-                    <p>My crud application developed using EXPRESS, Mongo DB, Pug templating engine. It was deployed with railway. </p>
-                    <a class="project-link"  href="https://github.com/macaroonforu/CV-Maker" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
-                    <a class="project-link" href="https://cv-application2.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
+                    <p>My crud application developed using EXPRESS, Mongo DB, Pug templating engine, deployed with Heroku. </p>
+                    <a class="project-link"  href="https://github.com/macaroonforu/Intramural-Manager" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a class="project-link" href="https://sport-crud-app-d75a9b88c96f.herokuapp.com" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>MongoDB</p>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-pug" data-inline="false"></span>Pug</p>
                     <p><span class="iconify" data-icon="skill-icons:expressjs-light" data-inline="false"></span>Express</p>
                 </div>
                 <div class="project-image-content">
-                    <img class="project-image" src="./projects/OIP.jpg">
+                    <img class="project-image" src="./projects/im-crud.png">
                 </div>
             </div>
-            -->
+            
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">CV Maker</h2>
                     <p>A CV maker made using React. Users can add personal information, an objective, and have the option to 
                         create, update, and delete educations/experiences.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/CV-Maker" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
-                    <a class="project-link" href="https://cv-maker-fm8l.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a class="project-link" href="https://cv-maker-fm8l.vercel.app/" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="devicon:react" data-inline="false"></span>        React</p>
                 </div>
                 <div class="project-image-content">
@@ -177,7 +176,7 @@
                     <h2 class="individual-project-title">Tic-Tac-Toe</h2>
                     <p>A tic-tac-toe game written in vanilla javascript </p>
                     <a class="project-link"  href="https://github.com/macaroonforu/tic-tac-toe" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
-                    <a class="project-link" href="https://tic-tac-toe-chi-seven.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a class="project-link" href="https://tic-tac-toe-chi-seven.vercel.app/" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
@@ -194,7 +193,7 @@
                         the books can also be deleted, and the option to toggle the book's status between read and not-read. 
                     </p>
                     <a class="project-link" href="https://github.com/macaroonforu/Interactive-Library" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
-                    <a class="project-link" href="https://interactive-library.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a class="project-link" href="https://interactive-library.vercel.app/" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
@@ -209,7 +208,7 @@
                     <h2 class="individual-project-title">Rock Paper Scissors</h2>
                     <p>A Rock-Paper-Scissors game written in Vanilla javascript.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/rock-paper-scissors" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
-                    <a class="project-link" href="https://rock-paper-scissors-six-jade.vercel.app/" class="github">Deployment<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a class="project-link" href="https://rock-paper-scissors-six-jade.vercel.app/" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
