--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">CRUD Application</h2>
-                    <p>My crud application developed using EXPRESS, Mongo DB, Pug templating engine, deployed with Heroku. </p>
+                    <p>A crud application developed using EXPRESS, Mongo DB, Pug templating engine, deployed with Heroku. </p>
                     <a class="project-link"  href="https://github.com/macaroonforu/Intramural-Manager" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
                     <a class="project-link" href="https://sport-crud-app-d75a9b88c96f.herokuapp.com" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>MongoDB</p>
