--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="projectdiv">
             <div class="individual-project-container">
                 <div class="project-text-content">
-                    <h2 class="individual-project-title">CRUD Application</h2>
+                    <h2 class="individual-project-title">Intramural Manager</h2>
                     <p>A crud application developed using EXPRESS, Mongo DB, Pug templating engine, deployed with Heroku. </p>
                     <a class="project-link"  href="https://github.com/macaroonforu/Intramural-Manager" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
                     <a class="project-link" href="https://sport-crud-app-d75a9b88c96f.herokuapp.com" class="github">Deployment</a>
