--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Intramural Manager</h2>
-                    <p>A crud application developed using EXPRESS, Mongo DB, Pug templating engine, deployed with Heroku. </p>
+                    <p>An a imaginary intramural league management system, deployed with Heroku, and built with NodeJS/Epress/MongoDB/PUG templating engine that lets users add/update/delete player/team/coach/sport database objects.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/Intramural-Manager" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
                     <a class="project-link" href="https://sport-crud-app-d75a9b88c96f.herokuapp.com" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>MongoDB</p>
@@ -191,7 +191,7 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Local Library</h2>
                     <p>A library app written with vanilla javascript. When a user adds a book, it is saved to local storage, 
-                        the books can also be deleted, and the option to toggle the book's status between read and not-read. 
+                        the books can also be deleted, with the option to toggle the book's status between read and not-read. 
                     </p>
                     <a class="project-link" href="https://github.com/macaroonforu/Interactive-Library" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
                     <a class="project-link" href="https://interactive-library.vercel.app/" class="github">Deployment</a>
@@ -207,7 +207,7 @@
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Rock Paper Scissors</h2>
-                    <p>A Rock-Paper-Scissors game written in Vanilla javascript.</p>
+                    <p>A Rock-Paper-Scissors game written with Vanilla javascript.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/rock-paper-scissors" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
                     <a class="project-link" href="https://rock-paper-scissors-six-jade.vercel.app/" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
