--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Intramural Manager</h2>
-                    <p>An a imaginary intramural league management system, deployed with Heroku, and built with NodeJS/Epress/MongoDB/PUG templating engine that lets users add/update/delete player/team/coach/sport database objects.</p>
+                    <p>An imaginary intramural league management system, deployed with Heroku, and built with NodeJS/Epress/MongoDB/PUG templating engine that lets users add/update/delete player, team, coach, and sport database objects.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/Intramural-Manager" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
                     <a class="project-link" href="https://sport-crud-app-d75a9b88c96f.herokuapp.com" class="github">Deployment</a>
                     <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>MongoDB</p>
