--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <p><span class="iconify" data-icon="skill-icons:expressjs-light" data-inline="false"></span>Express</p>
                 </div>
                 <div class="project-image-content">
-                    <img class="project-image" src="./projects/im-crud.png">
+                    <img class="project-image" src="./projects/intramural.png">
                 </div>
             </div>
             
