--- a/index.html
+++ b/index.html
@@ -141,6 +141,23 @@
     <section id="projects">
         <h1 class="section-title">Projects</h1>
         <div class="projectdiv">
+
+               <div class="individual-project-container">
+                <div class="project-text-content">
+                    <h2 class="individual-project-title">Weather Watcher</h2>
+                    <p>A weather application that allows you to search the name of a city or country, then fetches the relevant data from an API and displays it on a web page.</p>
+                    <a class="project-link"  href="https://github.com/macaroonforu/Weather-Application" class="github">Source Code<i class="fi-xnsuxl-github-alt"></i></a>
+                    <a class="project-link" href="https://macaroonforu.github.io/Weather-Application/" class="github">Deployment</a>
+                     <p><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>        Webpack</p>
+                    <p><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
+                    <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
+                </div>
+                <div class="project-image-content">
+                    <img class="project-image" src="./projects/weather.png">
+                </div>
+            </div>
+            
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">Intramural Manager</h2>
