--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                        <p><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
                        <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                        <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
+                       <p><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>        Webpack</p>
                        <p><span class="iconify" data-icon="vscode-icons:file-type-php" data-inline="false"></span>        PHP</p>
                        <p><span class="iconify" data-icon="devicon:react" data-inline="false"></span>        React</p>
                        <p><span class="iconify" data-icon="devicon:express" data-inline="false"></span>        Express</p>
