changed javasScript to JavaScript

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="skill-house">
                 <div class="skill-type">
                     <h2 class="skill-type-title">Web Development</h2>
-                       <p><span class="iconify" data-icon="logos:javascript" data-inline="false" height="24" width="24"></span>        JavasScript</p>
+                       <p><span class="iconify" data-icon="logos:javascript" data-inline="false" height="24" width="24"></span>        JavaScript</p>
                        <p><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                        <p><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
                        <p><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>        Webpack</p>
@@ -170,7 +170,7 @@
                         <a class="project-link" href="https://weather-watcher.vercel.app/" class="github">Deployment</a>
                         
                         <p class="projectskill"><span class="iconify" data-icon="skill-icons:webpack-light" data-inline="false"></span>        Webpack</p>
-                        <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
+                        <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
                         <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                         <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
                 
@@ -219,7 +219,7 @@
                     <p class="projectdesc">A tic-tac-toe game written in vanilla javascript </p>
                     <a class="project-link"  href="https://github.com/macaroonforu/tic-tac-toe" class="github">Source Code</a>
                     <a class="project-link" href="https://tic-tac-toe-chi-seven.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
                 </div>
@@ -236,7 +236,7 @@
                     </p>
                     <a class="project-link" href="https://github.com/macaroonforu/Interactive-Library" class="github">Source Code</a>
                     <a class="project-link" href="https://interactive-library.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
                 </div>
@@ -251,7 +251,7 @@
                     <p class="projectdesc">A Rock-Paper-Scissors game written with Vanilla javascript.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/rock-paper-scissors" class="github">Source Code</a>
                     <a class="project-link" href="https://rock-paper-scissors-six-jade.vercel.app/" class="github">Deployment</a>
-                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavasScript</p>
+                    <p class="projectskill"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span>        JavaScript</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-html" data-inline="false"></span>        HTML</p>
                     <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>        CSS</p>
                 </div>
