--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claire Dimitriuc</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:bi">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:bi" type="text/css">
+
     <link rel="icon" href="C.ico" />
 
     <script defer src="https://use.fontawesome.com/releases/v6.4.0/js/all.js" data-auto-a11y="true"></script>
     <script defer src="https://friconix.com/cdn/friconix.js"> </script> 
-     <script defer src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <script defer src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+
+     
     
 
     <script defer src="main.js"></script>
