--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Claire Dimitriuc</title>
     <link rel="stylesheet" href="style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka" type="text/css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:bi" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
+
+
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:bi" type="text/css"> --> 
 
     <link rel="icon" href="C.ico" />
 
