Added resume and fixed links

--- a/index.html
+++ b/index.html
@@ -60,10 +60,6 @@
 
         </div>
 
-
-
-
-        <!--Social Media Links-->
     </section>
 
 
@@ -98,8 +94,9 @@
                     <div class='pin'></div>
                     <div class='text'><p>Other Platforms</p>
                         <ul class="socialist">
-                            <li style="list-style:none;"><span class="iconify" data-icon="skill-icons:linkedin" data-inline="false"></span><a class="sociallink" href="https://www.linkedin.com/in/claire-dimitriuc/">Linkedin</a></li>
-                            <li style="list-style:none;"><span class="iconify" data-icon="devicon:github" data-inline="false"></span><a class="sociallink" href="https://github.com/macaroonforu">Github</a></li>
+                            <li style="list-style:none;text-decoration:underline;"><span class="iconify" data-icon="skill-icons:linkedin" data-inline="false"></span><a class="sociallink" href="https://www.linkedin.com/in/claire-dimitriuc/">Linkedin</a></li>
+                            <li style="list-style:none;text-decoration:underline;"><span class="iconify" data-icon="devicon:github" data-inline="false"></span><a class="sociallink" href="https://github.com/macaroonforu">Github</a></li>
+                            <li style="list-style:none;text-decoration:underline;"><span class="iconify" data-icon="pepicons-pencil:cv-circle-filled" data-inline="false"></span><a class="sociallink" href="./ClaireDimitriucResume.pdf">Resume</a></li>
                         </ul>
                     </div>
                 </div>
