changed multisim to modelsim

--- a/projects/ece295.html
+++ b/projects/ece295.html
@@ -42,7 +42,7 @@
 
              <div class="ece295imgcontent">
                 <img class="ece295-img" src="./tb.jpg">
-                <p>Waveform of our DSP system (MultiSim), based on specific inputs forced by a testbench that we wrote for debugging purposes</p>
+                <p>Waveform of our DSP system (ModelSim), based on specific inputs forced by a testbench that we wrote for debugging purposes</p>
             </div>
 
             <div class="ece295imgcontent">
