--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             <div class="individual-project-container">
                 <div class="project-text-content">
-                    <h2 class="individual-project-title">Digital Demodulating System</h2>
+                    <h2 class="individual-project-title">Digital Demodulation System</h2>
                     <p class="projectdesc">An end-to-end hardware design project undertaken in a course that involved the complete design, assembly, and testing of a digital demodulation system capable
                         of handling upper sideband, lower sideband, and amplitude-modulated signals, fufilling one of many roles as part of the entire class working together to build a functional radio. 
                     </p>
