--- a/projects/ece295.html
+++ b/projects/ece295.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <div class="projects ece295">
-            <h1 class="mainName section-title">Digital Demodulation System Information</h1>
+            <h1 class="ece295name section-title">Digital Demodulation System Information</h1>
 
             <a class="project-link ece295link"  href="https://github.com/macaroonforu/Subsystem-B" class="github">Source Code  </a>
 
