--- a/projects/ece295.html
+++ b/projects/ece295.html
@@ -40,10 +40,10 @@
                 <p>Predicted magnitude response of a low-pass filter used in our design, via MatLab</p>
             </div>
 
-             <div class="ece295imgcontent">
+             <!--div class="ece295imgcontent">
                 <img class="ece295-img" src="./tb.jpg">
                 <p>Waveform of our DSP system (ModelSim), based on specific inputs forced by a testbench that we wrote for debugging purposes</p>
-            </div>
+            </div-->
 
             <div class="ece295imgcontent">
                 <img class="ece295-img" src="./test.png">
