--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">16-Bit Processor</h2>
-                    <p class="projectdesc">A processor written in System Verilog with general purpose registers, a stack pointer, a link register, and subroutine support. Additionally, 
-                    an LED game was written in ARM-A9 assembly language to run on the processor.</p>
+                    <p class="projectdesc">A processor written in System Verilog with general purpose registers, a stack pointer, a link register, a program counter, and an ALU, which are controlled by a finite-state machine. The processor supports memory read/writes as well as subroutines. Additionally, 
+                    an game that interacts with the LED switches and HEX Display on the FPGA was written in ARM-A9 assembly to run on the processor.</p>
 
                         <a class="project-link"  href="https://github.com/macaroonforu/16-Bit-Processor" class="github">Source Code</a>
                     
