--- a/projects/ece295.html
+++ b/projects/ece295.html
@@ -16,13 +16,13 @@
 
             <a class="project-link ece295link"  href="https://github.com/macaroonforu/Subsystem-B" class="github">Source Code  </a>
 
-            <p>This project involved writing modules in System Verilog to handle the timing of receiving digital data from an ADC and converting it to paralell data, digitally processing the signals with finite-impulse response filters implemented in System Verilog, and then sending the signals back to a DAC to be output. As part of the design process, Altium Designer was used to 
+            <p>This project involved writing modules in System Verilog to handle the timing of receiving digital data from an ADC and converting it to parallel data, digitally processing the signals with finite-impulse response filters implemented in System Verilog, and then sending the signals back to a DAC to be output. As part of the design process, Altium Designer was used to 
             design a PCB that would interface the DAC/ADC with the DESoc MAX 10 FPGA we were using for the digital signal processing, then soldering the components of the PCB together. Matlab was used to determine proper filter coefficients that could be used to 
             achieve our desired results, as well as predict the magnitude and impulse responses of the filters. We also extended template testbenches that were provided to suit our needs and evaluated the digital design using ModelSim when we were experiencing inconsitent results. Finally, both manual, and automated testing using oscilloscopes/DMMs and the PyVisa Library were used to debug and evaluate our design.</p>
 
             <div class="ece295imgcontent">
                 <img class="ece295-img" src="./DMM.jpg">
-                <p>Generating a test AM signal, demodulating it with our device, and reading the output on an ossiloscope</p>
+                <p>Generating a test AM signal, demodulating it with our device, and reading the output on an oscilloscope</p>
             </div>
 
             <div class="ece295imgcontent">
