--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
             <div class="individual-project-container">
                 <div class="project-text-content">
                     <h2 class="individual-project-title">16-Bit Processor</h2>
-                    <p class="projectdesc">A processor written in Verilog with general purpose registers, a stack pointer, a link register, a program counter, and an ALU, which are controlled by a finite-state machine. The processor supports memory read/writes as well as subroutines. Additionally, 
-                    a game that interacts with the LED switches and HEX Display on the FPGA was written in ARM-A9 assembly to run on the processor.</p>
+                    <p class="projectdesc">A processor written in Verilog with general purpose registers, a stack pointer, a link register, a program counter, and an ALU, which are all controlled by a finite-state machine. The processor supports memory read/writes as well as subroutines. Additionally, a game that interacts with the LED switches and HEX Display on the FPGA was written in ARM-A9 assembly to be run using the instruction set provided by the processor.</p>
 
                         <a class="project-link"  href="https://github.com/macaroonforu/16-Bit-Processor" class="github">Source Code</a>
                     
