--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     
                 
                 <div class="skill-type">
-                    <h2 class="skill-type-title">Programming, Software</h2>
+                    <h2 class="skill-type-title">Programming and Software</h2>
                     <p><span class="iconify" data-icon="logos:python" data-inline="false"></span>        Python</p>
                         <p><span class="iconify" data-icon="vscode-icons:file-type-c2" data-inline="false"></span>        C</p>
                             <p><span class="iconify" data-icon="vscode-icons:file-type-cpp" data-inline="false"></span>        C++</p>
