--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <a class="project-link" href="projects/ece295.html" class="github">More Images + Information</a>
                     <!--<a class="project-link" href="https://sport-crud-app-d75a9b88c96f.herokuapp.com" class="github">Deployment</a>-->
                     <p class="projectskill"><span class="iconify" data-icon="devicon:matlab" data-inline="false"></span>Matlab</p>
-                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-light-systemverilog" data-inline="false"></span>Sysem Verilog</p>
+                    <p class="projectskill"><span class="iconify" data-icon="vscode-icons:file-type-light-systemverilog" data-inline="false"></span>System Verilog</p>
                     <p class="projectskill"><span class="iconify" data-icon="simple-icons:altiumdesigner" data-inline="false"></span>Altium Designer</p>
                     <p class="projectskill"><span class="iconify" data-icon="game-icons:soldering-iron" data-inline="false"></span>Soldering</p>
                     <p class="projectskill"><span class="iconify" data-icon="arcticons:oscilloscope" data-inline="false"></span>Instrumentation: Waveform Generator/Oscilloscope/DMM</p>
