--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="note sticky1">
                  
                     <div class='pin'></div>
-                    <p style="font-size: 13px;">Third year computer engineering student pursuing minors in Artificial Intelligence and Robotics.</p>
+                    <p style="font-size: 13px;">Third year computer engineering student at the University of Toronto pursuing minors in Artificial Intelligence and Robotics.</p>
                     <img src="./karen.webp" height="80px">
                 </div>
 
