--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                     <p><span class="iconify" data-icon="vscode-icons:file-type-mongo" data-inline="false"></span>        MongoDB</p>
                         <p><span class="iconify" data-icon="vscode-icons:file-type-access" data-inline="false"></span>        Microsoft Access</p>
                             <p><span class="iconify" data-icon="vscode-icons:file-type-sql" data-inline="false"></span>         SQL</p>
-                         <p><span class="iconify" data-icon="vscode-icons:file-type-systemverilog" data-inline="false"></span>        System Verilog/Verilog</p>
+                         <p><span class="iconify" data-icon="vscode-icons:file-type-systemverilog" data-inline="false"></span>        System Verilog</p>
+                         <p><span class="iconify" data-icon="vscode-icons:file-type-verilog" data-inline="false"></span>Verilog</p>
                      <p><span class="iconify" data-icon="file-icons:assembly-arm" data-inline="false"></span>        ARM Assembly</p>
                 </div>
             </div>
