change phrasing of react box

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="project-text-content">
                     <h2 class="individual-project-title">CV Maker</h2>
                     <p class="projectdesc">A CV maker made using React. Users can add personal information, an objective, and have the option to 
-                        create, update, and delete educations/experiences.</p>
+                        create, update, and delete education/experience entries.</p>
                     <a class="project-link"  href="https://github.com/macaroonforu/CV-Maker" class="github">Source Code</a>
                     <a class="project-link" href="https://cv-maker-fm8l.vercel.app/" class="github">Deployment</a>
                     <p class="projectskill"><span class="iconify" data-icon="devicon:react" data-inline="false"></span>        React</p>
