fixed some photos

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <p class="projectskill"><img src="projects/modelsim.png" height="15px"> ModelSim</p>
                 </div>
                 <div class="project-image-content">
-                    <img class="project-image" src="./projects/radio.png">
+                    <img class="project-image" src="./projects/radio.jpg">
                 </div>
             </div>
 
