--- a/projects/ece295.html
+++ b/projects/ece295.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="ece295imgcontent">
-                <img class="ece295-img" src="./test.png">
+                <img class="ece295-img" src="./ssb.jpg">
                 <p>Eventually, automated testing helped us evaluate our final design, for example, the sideband rejection ratio of our design. The PyVISA library was used to connect to measurement instruments, which controlled stimuli (eg: generating signals of varying amplitudes and frequencies on the waveform generator), then read the output from our system based on signals sensed by the oscilloscope. The collected data was graphed using the Matplotlib library.</p>
             </div>
 
